helm/fluent-bit/network-policy.yaml
# --------------------------------------------------------------------
# Copyright (c) 2023, WSO2 LLC. (http://wso2.com) All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# -----------------------------------------------------------------------

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-rules-fluent-bit
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: fluent-bit

  policyTypes:
  - Egress
  - Ingress
  egress:
  # Allow egress to the K8s Kubelet on port 10250 to get Kubernetes metadata
  # ref - https://docs.fluentbit.io/manual/pipeline/filters/kubernetes#optional-feature-using-kubelet-to-get-metadata
  # 
  # Specify the nodepool subnet as the cidr.
  # Nodepool subnet value is set by a Kustomize patch
  - to:
    - ipBlock:
        cidr: "X.X.X.X/X"
    ports:
    - port: 10250
      protocol: TCP

  # Allow egress to OpenSearch on port 9200. FluentBit will output logs to OpenSearch through this
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: choreo-observability
      podSelector:
        matchLabels:
          app.kubernetes.io/name: opensearch
    ports:
    - port: 9200
      protocol: TCP
  ingress:
  # Allow ingress from loggingapi to receive requests to the health check endpoint
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: choreo-observability
      podSelector:
        matchLabels:
          choreo.component: choreo-loggingapi
    ports:
    - port: 2020
      protocol: TCP
